Fixed Overlapping of Logo in footer

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -30,11 +30,11 @@
 }
 
 .logo {
-  height: 60px;
+  height: 80px;
 }
 
 .logo-bottom {
-  max-height: 80px;
+  width: 100%;
 }
 
 .navbar-light .navbar-nav {
